public/css/header.css
/* GLOBAL/DESKTOP STYLING */
:root {
    font-family: "Roboto", "Sans Serif";
}

body {
    overflow-x: hidden;
}

header {
    background-color: #6fa66f;
    align-items: center;
    font-family: "Roboto", "Sans Serif";
    font-size: 1.5rem;
}

#siteLogo {
    height:70px; 
    width:70px; 
    position: relative; 
    left:20px;
    max-width: none;
    flex-shrink: 0;
}

#logoBrand {
    color: darkgreen;
    position: absolute;
    left: 100px;
    top: 20px;
}

#dropdownMenu {
    position: absolute;
    top: 70px;
    right: 0px;

    /* Slide left onto screen animation */
    transform: translateX(100%);
    transition: transform 0.3s ease;

    display: flex;
    flex-direction: column;

    width: 180px;
    height: calc(100vh - 120px);

    overflow: hidden;
}

#dropdownMenu.show {
    transform: translateX(0);
}

#dropdownMenu a{
    font-size: 1.2rem;;
    display: flex;
    flex: 1;
    align-items: center;
    justify-content: center;
    color: white;
    text-decoration: none;
    background-color: #5a8e5a;
    box-shadow: 0 4px 15px rgba(0,0,0,0.15);
}

#dropdownMenu a:hover{
    background-color: #5087065f;
}

 #hbIcon{
    font-size: 45px;
    color: white;
    position: relative;
    right: 20px;
    cursor: pointer;
 }

 #hbIcon:hover {
    color: #eee
 }

/* MOBILE STYLING */
@media (max-width: 768px) {

#siteLogo {
    height:30px; 
    width:30px; 
    position: relative; 
    left:10px;
    max-width: none;
    flex-shrink: 0;
}

#logoBrand {
    color: darkgreen;
    position: absolute;
    left: 55px;
    top: 11px;
    font-size: medium;
}

#dropdownMenu {
    position: static;
    top: auto;
    right: auto;
    width: 100%;
    flex-shrink: 0;
    z-index: 10;
}

#dropdownMenu.show {

}

#dropdownMenu a{
    height: 60px;
    font-size: 1.2rem;;
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    text-decoration: none;
    background-color: #5a8e5a;
}

#dropdownMenu a:hover{
    background-color: #6e965f;
}

#hbIcon{
    font-size: 20px;
    color: white;
    position: relative;
    right: 10px;
    cursor: pointer;
}

    
}

